feat: Enhance CreateOrEditContent component with improved image handling and add Arabic translations for content management

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1228,6 +1228,40 @@
   "no cards available": "لا توجد بطاقات متاحة",
   "Master Cheng Yen's Daily Journal": "مذكرات الأستاذ تشنغ ين اليومية",
   "Images": " الصور",
+  "Contents": "المحتويات",
+  "All Contents": "جميع المحتويات",
+  "Add/Edit Content": "إضافة/تعديل المحتوى",
+  "Contents Categories": "فئات المحتويات",
+  "Contents List": "قائمة المحتويات",
+  "Search contents...": "بحث عن المحتويات...",
+  "contents": "",
+  "Not Weekly": "ليس أسبوعيًا",
+  "Weekly": "أسبوعيًا",
+  "Weekly List": "قائمة الأسبوعية",
+  "All": "الكل",
+  "Content Images": "صور المحتوى",
+  "You can upload multiple images": "يمكنك تحميل صور متعددة",
+  "Please select images with minimum dimensions of 1920x1080 pixels for best quality.": "يرجى اختيار صور بأبعاد لا تقل عن 1920x1080 بكسل للحصول على أفضل جودة.",
+  "Create New Content": "إنشاء محتوى جديد",
+  "Back to Contents List": "العودة إلى قائمة المحتويات",
+  "Total images selected": "إجمالي الصور المحددة",
+  "Add image URLs here. These will be sent as images_url": "أضف روابط الصور هنا. سيتم إرسالها كصور_الرابط",
+  "Add image URLs as alternative": "أضف روابط الصور كبديل",
+  "Image URLs": "روابط الصور",
+  "Enter image URL and press Enter": "أدخل رابط الصورة واضغط على Enter",
+  "Enter content title": "أدخل عنوان المحتوى",
+  "Enter content subtitle": "أدخل عنوان المحتوى الفرعي",
+  "Enter content excerpt or summary": "أدخل مقتطف أو ملخص المحتوى",
+  "Enter the full content of the content": "أدخل المحتوى الكامل للمحتوى",
+  "Click to upload images or drag and drop": "  انقر لتحميل الصور أو اسحبها وأفلتها",
+  "Create Content": "إنشاء محتوى",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
   "": "",
   "": "",
   "": "",
