feat: Update footer links and improve card navigation; add Arabic translations for weekly content

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1255,14 +1255,13 @@
   "Enter the full content of the content": "أدخل المحتوى الكامل للمحتوى",
   "Click to upload images or drag and drop": "  انقر لتحميل الصور أو اسحبها وأفلتها",
   "Create Content": "إنشاء محتوى",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
+  "This Week’s Contents": "محتويات هذا الأسبوع",
+  "This Week's Video": "فيديو هذا الأسبوع",
+  "Watch this week's featured video": "شاهد فيديو هذا الأسبوع المميز",
+  "This Week's Card": "بطاقة هذا الأسبوع",
+  "Explore this week's card": "استكشف بطاقة هذا الأسبوع",
+  "This Week's Photo": "صورة هذا الأسبوع",
+  "Check this week's photo post": "تحقق من منشور الصورة لهذا الأسبوع",
   "": "",
   "": "",
   "": ""
