--- a/frontend/src/i18n/locales/ch/translation.json
+++ b/frontend/src/i18n/locales/ch/translation.json
@@ -943,7 +943,6 @@
   "Bangladesh": "孟加拉國",
   "Belarus": "白俄羅斯",
   "Belgium": "比利時",
-  "Bosnia and Herzegovina": "波斯尼亞和黑塞哥維那",
   "Brazil": "巴西",
   "Bulgaria": "保加利亞",
   "Cambodia": "柬埔寨",
@@ -1190,5 +1189,108 @@
   "Contents": "閱",
   "Videos": "上",
   "Cards": "雲",
-  "Events & Community": "端"
+  "Events & Community": "端",
+  "Manage Social Media": "管理社交媒體",
+  "Add, edit, and remove social media links for your organization": "添加、編輯和刪除您的組織的社交媒體鏈接",
+  "Add New Social Link": "添加新的社交鏈接",
+  "Platform": "平台",
+  "Select a platform": "選擇一個平台",
+  "URL": "網址",
+  "Add Social Link": "添加社交鏈接",
+  "link": "鏈接",
+  "No social links added yet": "尚未添加社交鏈接",
+  "Click the button above to add your first social media link": "點擊上方按鈕以添加您的第一個社交媒體鏈接",
+  "Please fill all fields": "請填寫所有欄位",
+  "Invalid URL format": "網址格式無效",
+  "Failed to add social link": "添加社交鏈接失敗",
+  "Social link added successfully": "成功添加社交鏈接",
+  "Social link updated successfully": "成功更新社交鏈接",
+  "Delete Social Link": "刪除社交鏈接",
+  "Are you sure you want to delete this social media link?": "您確定要刪除此社交媒體鏈接嗎？",
+  "Social link deleted successfully": "成功刪除社交鏈接",
+  "Sort Section": "排序部分",
+  "Profile Settings": "個人資料設置",
+  "Project Manager": "項目經理",
+  "123 Main St, City, State": "123 主街，城市，州",
+  "Instagram": "Instagram",
+  "Facebook": "Facebook",
+  "Twitter": "Twitter",
+  "LinkedIn": "LinkedIn",
+  "TikTok": "TikTok",
+  "YouTube": "YouTube",
+  "Snapchat": "Snapchat",
+  "Pinterest": "Pinterest",
+  "Reddit": "Reddit",
+  "WhatsApp": "WhatsApp",
+  "Manage Sections": "管理部分",
+  "Drag and drop to reorder sections": "拖放以重新排序部分",
+  "no cards available": "沒有可用的卡片",
+  "Master Cheng Yen's Daily Journal": "證嚴法師的每日札記",
+  "Images": "圖片",
+  "All Contents": "所有內容",
+  "Add/Edit Content": "添加/編輯內容",
+  "Contents Categories": "內容類別",
+  "Contents List": "內容列表",
+  "Search contents...": "搜尋內容...",
+  "contents":  "內容",
+  "Not Weekly": "非每週",
+  "Weekly": "每週",
+  "Weekly List": " 每週列表",
+  "All": "全部",
+  "Content Images": " 內容圖片",
+  "You can upload multiple images": "可以上傳多張圖片",
+  "Please select images with minimum dimensions of 1920x1080 pixels for best quality.": "請選擇最小尺寸為1920x1080像素的圖片以獲得最佳質量。",
+  "Create New Content": "創建新內容",
+  "Back to Contents List": "返回內容列表",
+  "Total images selected": "選擇的圖片總數",
+  "Add image URLs here. These will be sent as images_url": "在此處添加圖片網址。這些將作為 images_url 發送",
+  "Add image URLs as alternative": "在此處添加圖片網址作為替代",
+  "Image URLs": "圖片網址",
+  "Enter image URL and press Enter": "輸入圖片網址並按 Enter",
+  "Enter content title": "輸入內容標題",
+  "Enter content subtitle": "輸入內容副標題",
+  "Enter content excerpt or summary": "輸入內容摘錄或摘要",
+  "Enter the full content of the content": "輸入內容的完整內容",
+  "Click to upload images or drag and drop": "點擊上傳圖片或拖放",
+  "Create Content": "創建內容",
+  "No Content available.": "沒有可用的內容。",
+  "Update Content": "更新內容",
+  "Privacy Policy": "隱私政策",
+  "Terms of Use": "使用條款",
+  "• by Tzu Chi TR Design.": "• 由慈濟土耳其設計",
+  "This Week’s Contents": "本週內容",
+  "This Week's Video": "本週視頻",
+  "Watch this week's featured video": "觀看本週精選視頻",
+  "This Week's Card": "本週卡片",
+  "Explore this week's card": "探索本週卡片",
+  "This Week's Photo": "本週照片",
+  "Check this week's photo post": "查看本週照片帖子",
+  "This Week's Top Cards": "本週熱門卡片",
+  "Is Featured": "精選",
+  "Is New": "新",
+  "Top Viewed Contents": "最多瀏覽內容",
+  "Top Liked Contents": "最多喜愛內容",
+  "Taiwant": "台灣",
+  "Add/Edit Video": "添加/編輯視頻",
+  "All Events": "所有事件",
+  "Website Info": "網站資訊",
+  "Click to upload logo": "點擊上傳標誌",
+  "No logo uploaded yet": "尚未上傳標誌",
+  "Upload New Logo": "上傳新標誌",
+  "Website Information": "網站資訊",
+  "Website Logo": "網站標誌",
+  "Upload and manage your website logo": "上傳並管理您的網站標誌",
+  "Current Logo": "當前標誌",
+  "Save Logo": "保存標誌",
+  "Logo updated successfully": "標誌更新成功",
+  "Logo uploaded successfully": "標誌上傳成功",
+  "Latest Updates": "最新更新",
+  "Tags Category": "標籤類別",
+  "Trending Now": "熱門趨勢",
+  "Your account is not confirmed, please check your email": "您的帳戶尚未確認，請檢查您的電子郵件",
+  "Optional - Alternative to file upload": "選擇性 - 文件上傳的替代方案",
+  "Card Type": "卡片類型",
+  "Enter card type (e.g., featured, regular, special)": "輸入卡片類型（例如，精選、常規、特殊）",
+  "Mark as New": "標記為新",
+  "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
