--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -859,7 +859,6 @@
   "Bangladesh": "Bangladesh",
   "Belarus": "Belarus",
   "Belgium": "Belgium",
-  "Bosnia and Herzegovina": "Bosnia and Herzegovina",
   "Brazil": "Brazil",
   "Bulgaria": "Bulgaria",
   "Cambodia": "Cambodia",
@@ -1190,5 +1189,108 @@
   "post_reading": "Post Reading",
   "post_card": "Post Card",
   "post_photo": "Post Photo",
-  "event": "Event"
+  "event": "Event",
+  "Manage Social Media": "Manage Social Media",
+  "Add, edit, and remove social media links for your organization": "Add, edit, and remove social media links for your organization",
+  "Add New Social Link": "Add New Social Link",
+  "Platform": "Platform",
+  "Select a platform": "Select a platform",
+  "URL": "URL",
+  "Add Social Link": "Add Social Link",
+  "link": "Links",
+  "No social links added yet": "No social links added yet",
+  "Click the button above to add your first social media link": "Click the button above to add your first social media link",
+  "Please fill all fields": "Please fill all fields",
+  "Invalid URL format": "Invalid URL format",
+  "Failed to add social link": "Failed to add social link",
+  "Social link added successfully": "Social link added successfully",
+  "Social link updated successfully": "Social link updated successfully",
+  "Delete Social Link": "Delete Social Link",
+  "Are you sure you want to delete this social media link?": "Are you sure you want to delete this social media link?",
+  "Social link deleted successfully": "Social link deleted successfully",
+  "Sort Section": "Sort Section",
+  "Profile Settings": "Profile Settings",
+  "Project Manager": "Project Manager",
+  "123 Main St, City, State": "123 Main St, City, State",
+  "Instagram": "Instagram",
+  "Facebook": "Facebook",
+  "Twitter": "Twitter",
+  "LinkedIn": "LinkedIn",
+  "TikTok": "TikTok",
+  "YouTube": "YouTube",
+  "Snapchat": "Snapchat",
+  "Pinterest": "Pinterest",
+  "Reddit": "Reddit",
+  "WhatsApp": "WhatsApp",
+  "Manage Sections": "Manage Sections",
+  "Drag and drop to reorder sections": "Drag and drop to reorder sections",
+  "no cards available": "No cards available",
+  "Master Cheng Yen's Daily Journal": "Master Cheng Yen's Daily Journal",
+  "Images": "Images",
+  "Contents": "Contents",
+  "All Contents": "All Contents",
+  "Add/Edit Content": "Add/Edit Content",
+  "Contents Categories": "Contents Categories",
+  "Contents List": "Contents List",
+  "Search contents...": "Search contents...",
+  "contents": "Contents",
+  "Not Weekly": "Not Weekly",
+  "Weekly": "Weekly",
+  "Weekly List": "Weekly List",
+  "All": "All",
+  "Content Images": "Content Images",
+  "You can upload multiple images": "You can upload multiple images",
+  "Please select images with minimum dimensions of 1920x1080 pixels for best quality.": "Please select images with minimum dimensions of 1920x1080 pixels for best quality.",
+  "Create New Content": "Create New Content",
+  "Back to Contents List": "Back to Contents List",
+  "Total images selected": "Total images selected",
+  "Add image URLs here. These will be sent as images_url": "Add image URLs here. These will be sent as images_url",
+  "Add image URLs as alternative": "Add image URLs as alternative",
+  "Image URLs": "Image URLs",
+  "Enter image URL and press Enter": "Enter image URL and press Enter",
+  "Enter content title": "Enter content title",
+  "Enter content subtitle": "Enter content subtitle",
+  "Enter content excerpt or summary": "Enter content excerpt or summary",
+  "Enter the full content of the content": "Enter the full content of the content",
+  "Click to upload images or drag and drop": "Click to upload images or drag and drop",
+  "Create Content": "Create Content",
+  "No Content available.": "No Content available.",
+  "Update Content": "Update Content",
+  "Privacy Policy": "Privacy Policy",
+  "Terms of Use": "Terms of Use",
+  "• by Tzu Chi TR Design.": "• by Tzu Chi TR Design.",
+  "This Week’s Contents": "This Week’s Contents",
+  "This Week's Video": "This Week's Video",
+  "Watch this week's featured video": "Watch this week's featured video",
+  "This Week's Card": "This Week's Card",
+  "Explore this week's card": "Explore this week's card",
+  "This Week's Photo": "This Week's Photo",
+  "Check this week's photo post": "Check this week's photo post",
+  "Cards": "Cards",
+  "This Week's Top Cards": "This Week's Top Cards",
+  "Is Featured": "Is Featured",
+  "Is New": "Is New",
+  "Top Viewed Contents": "Top Viewed Contents",
+  "Top Liked Contents": "Top Liked Contents",
+  "Taiwant": "Taiwant",
+  "Add/Edit Video": "Add/Edit Video",
+  "All Events": "All Events",
+  "Website Info": " Website Info",
+  "Click to upload logo": "Click to upload logo",
+  "No logo uploaded yet": "No logo uploaded yet",
+  "Upload New Logo": "Upload New Logo",
+  "Website Information": "Website Information",
+  "Website Logo": "Website Logo",
+  "Upload and manage your website logo": "Upload and manage your website logo",
+  "Current Logo": "Current Logo",
+  "Save Logo": "Save Logo",
+  "Logo updated successfully": "Logo updated successfully",
+  "Logo uploaded successfully": "Logo uploaded successfully",
+  "Latest Updates": "Latest Updates",
+  "Tags Category": "Tags Category",
+  "Trending Now": "Trending Now",
+  "Your account is not confirmed, please check your email": "Your account is not confirmed, please check your email.",
+  "Environment & Sustainability": "Environment & Sustainability",
+  "Art & Culture": "Art & Culture",
+  "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
