--- a/frontend/src/i18n/locales/jp/translation.json
+++ b/frontend/src/i18n/locales/jp/translation.json
@@ -1189,38 +1189,108 @@
   "Failed to process image": "画像の処理に失敗しました",
   "Your account is not confirmed, please check your email": "アカウントが確認されていません。メールを確認してください。",
   "Add Watchlist": "ウォッチリストに追加",
-  "Manage Social Media": "إدارة وسائل التواصل الاجتماعي",
-  "Add, edit, and remove social media links for your organization": "إضافة وتحرير وإزالة روابط وسائل التواصل الاجتماعي لمنظمتك",
-  "Add New Social Link": "إضافة رابط اجتماعي جديد",
-  "Platform": "المنصة",
-  "Select a platform": "اختر المنصة",
-  "URL": "الرابط",
-  "Add Social Link": "إضافة رابط اجتماعي",
-  "link": "الروابط",
-  "No social links added yet": "لم تتم إضافة روابط اجتماعية بعد",
-  "Click the button above to add your first social media link": "انقر على الزر أعلاه لإضافة رابط وسائل التواصل الاجتماعي الأول الخاص بك",
-  "Please fill all fields": "يرجى ملء جميع الحقول",
-  "Invalid URL format": "تنسيق الرابط غير صالح",
-  "Failed to add social link": "فشل في إضافة الرابط الاجتماعي",
-  "Social link added successfully": "تمت إضافة الرابط الاجتماعي بنجاح",
-  "Social link updated successfully": "تم تحديث الرابط الاجتماعي بنجاح",
-  "Delete Social Link": "حذف الرابط الاجتماعي",
-  "Are you sure you want to delete this social media link?": "هل أنت متأكد أنك تريد حذف هذا الرابط الاجتماعي؟",
-  "Social link deleted successfully": "تم حذف الرابط الاجتماعي بنجاح",
-  "Sort Section": "قسم الترتيب",
-  "Profile Settings": "إعدادات الملف الشخصي",
-  "Project Manager": "مدير المشروع",
-  "123 Main St, City, State": "الشارع الرئيسي، المدينة، الولاية 123",
-  "Instagram": "إنستغرام",
-  "Facebook": "فيسبوك",
-  "Twitter": "تويتر",
-  "LinkedIn": "لينكد إن",
-  "TikTok": "تيك توك",
-  "YouTube": "يوتيوب",
-  "Snapchat": "سناب شات",
-  "Pinterest": "بينتيريست",
-  "Reddit": "ريديت",
-  "WhatsApp": "واتساب",
-  "Manage Sections": "إدارة الأقسام",
-  "Drag and drop to reorder sections": "اسحب وأفلت لإعادة ترتيب الأقسام"
+  "Manage Social Media": "ソーシャルメディアの管理",
+  "Add, edit, and remove social media links for your organization": "組織のソーシャルメディアリンクを追加、編集、削除します",
+  "Add New Social Link": "新しいソーシャルリンクを追加",
+  "Platform": "プラットフォーム",
+  "Select a platform": "プラットフォームを選択",
+  "URL": "URL",
+  "Add Social Link": "ソーシャルリンクを追加",
+  "link": "リンク",
+  "No social links added yet": "まだソーシャルリンクが追加されていません",
+  "Click the button above to add your first social media link": "上のボタンをクリックして最初のソーシャルメディアリンクを追加してください",
+  "Please fill all fields": "すべてのフィールドに入力してください",
+  "Invalid URL format": "無効なURL形式です",
+  "Failed to add social link": "ソーシャルリンクの追加に失敗しました",
+  "Social link added successfully": "ソーシャルリンクが正常に追加されました",
+  "Social link updated successfully": "ソーシャルリンクが正常に更新されました",
+  "Delete Social Link": "ソーシャルリンクを削除",
+  "Are you sure you want to delete this social media link?": "このソーシャルメディアリンクを削除してもよろしいですか？",
+  "Social link deleted successfully": "ソーシャルリンクが正常に削除されました",
+  "Sort Section": "セクションの並べ替え",
+  "Profile Settings": "プロフィール設定",
+  "Project Manager": "プロジェクトマネージャー",
+  "123 Main St, City, State": "123 メインストリート、市、州",
+  "Instagram": "インスタグラム",
+  "Facebook": "フェイスブック",
+  "Twitter": "ツイッター",
+  "LinkedIn": "リンクトイン",
+  "TikTok": "ティックトック",
+  "YouTube": "ユーチューブ",
+  "Snapchat": "サブシャット",
+  "Pinterest": "ピンタレスト",
+  "Reddit": "レディット",
+  "WhatsApp": "ワッツアップ",
+  "Manage Sections": "セクションの管理",
+  "Drag and drop to reorder sections": "ドラッグアンドドロップでセクションの順序を変更",
+  "Create Content": "コンテンツを作成",
+  "No Content available.": "利用可能なコンテンツはありません。",
+  "Update Content": "コンテンツを更新",
+  "Privacy Policy": "プライバシーポリシー",
+  "Terms of Use": "利用規約",
+  "• by Tzu Chi TR Design.": "• Tzu Chi TR デザインによる",
+  "This Week’s Contents": "今週のコンテンツ",
+  "This Week's Video": "今週のビデオ",
+  "Watch this week's featured video": "今週の注目ビデオを視聴",
+  "This Week's Card": "今週のカード",
+  "Explore this week's card": "今週のカードを探検",
+  "This Week's Photo": "今週の写真",
+  "Check this week's photo post": "今週の写真投稿を確認",
+  "Cards": "カード",
+  "This Week's Top Cards": "今週のトップカード",
+  "Is Featured": "おすすめ",
+  "Is New": "新着",
+  "Top Viewed Contents": "最も閲覧されたコンテンツ",
+  "Top Liked Contents": "最もいいねされたコンテンツ",
+  "Taiwant": "台湾",
+  "Add/Edit Video": "ビデオの追加/編集",
+  "All Events": "すべてのイベント",
+  "Website Info": "ウェブサイト情報",
+  "Click to upload logo": "ロゴをアップロードするにはクリックしてください",
+  "No logo uploaded yet": "まだロゴがアップロードされていません",
+  "Upload New Logo": "新しいロゴをアップロード",
+  "Website Information": "ウェブサイト情報",
+  "Website Logo": "ウェブサイトのロゴ",
+  "Upload and manage your website logo": "ウェブサイトのロゴをアップロードおよび管理します",
+  "Current Logo": "現在のロゴ",
+  "Save Logo": "ロゴを保存",
+  "Logo updated successfully": "ロゴが正常に更新されました",
+  "Logo uploaded successfully": "ロゴが正常にアップロードされました",
+  "Latest Updates": "最新の更新",
+  "Tags Category": "タグカテゴリ",
+  "Trending Now": "現在のトレンド",
+  "no cards available": "利用可能なカードはありません",
+  "Master Cheng Yen's Daily Journal": "マスター・チェン・イェンの日記",
+  "Images": "画像",
+  "Contents": "コンテンツ",
+  "All Contents": "すべてのコンテンツ",
+  "Add/Edit Content": "コンテンツの追加/編集",
+  "Contents Categories": "コンテンツカテゴリ",
+  "Contents List": "コンテンツリスト",
+  "Search contents...": "コンテンツを検索...",
+  "contents": "コンテンツ",
+  "Not Weekly": "非週間",
+  "Weekly": "週間",
+  "Weekly List": "週間リスト",
+  "All": "すべて",
+  "Content Images": "コンテンツ画像",
+  "You can upload multiple images": "複数の画像をアップロードできます",
+  "Please select images with minimum dimensions of 1920x1080 pixels for best quality.": "最高の品質を得るには、最小寸法が1920x1080ピクセルの画像を選択してください。",
+  "Create New Content": "新しいコンテンツを作成",
+  "Back to Contents List": "コンテンツリストに戻る",
+  "Total images selected": "選択された画像の合計",
+  "Add image URLs here. These will be sent as images_url": "ここに画像のURLを追加してください。これらはimages_urlとして送信されます",
+  "Add image URLs as alternative": "代替として画像のURLを追加",
+  "Image URLs": "画像のURL",
+  "Enter image URL and press Enter": "画像のURLを入力してEnterキーを押してください",
+  "Enter content title": "コンテンツのタイトルを入力してください",
+  "Enter content subtitle": "コンテンツのサブタイトルを入力してください",
+  "Enter content excerpt or summary": "コンテンツの抜粋または要約を入力してください",
+  "Enter the full content of the content": "コンテンツの全文を入力してください",
+  "Click to upload images or drag and drop": "画像をアップロードするにはクリックするか、ドラッグアンドドロップしてください",
+  "Optional - Alternative to file upload": "ファイルアップロードの代替オプション",
+  "Card Type": "カードタイプ",
+  "Enter card type (e.g., featured, regular, special)": "カードタイプを入力してください（例：注目、通常、特別）",
+  "Mark as New": "新着としてマーク",
+  "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
