--- a/frontend/src/i18n/locales/tr/translation.json
+++ b/frontend/src/i18n/locales/tr/translation.json
@@ -841,7 +841,6 @@
   "Bangladesh": "Bangladeş",
   "Belarus": "Belarus",
   "Belgium": "Belçika",
-  "Bosnia and Herzegovina": "Bosna Hersek",
   "Brazil": "Brezilya",
   "Bulgaria": "Bulgaristan",
   "Cambodia": "Kamboçya",
@@ -1190,46 +1189,108 @@
   "Converting HEIC image...": "HEIC görüntü dönüştürülüyor...",
   "Failed to process image": "Görüntü işlenemedi",
   "Your account is not confirmed, please check your email": "Hesabınız onaylanmadı, lütfen e-postanızı kontrol edin.",
-  "Manage Social Media": "إدارة وسائل التواصل الاجتماعي",
-  "Add, edit, and remove social media links for your organization": "إضافة وتحرير وإزالة روابط وسائل التواصل الاجتماعي لمنظمتك",
-  "Add New Social Link": "إضافة رابط اجتماعي جديد",
-  "Platform": "المنصة",
-  "Select a platform": "اختر المنصة",
-  "URL": "الرابط",
-  "Add Social Link": "إضافة رابط اجتماعي",
-  "link": "الروابط",
-  "No social links added yet": "لم تتم إضافة روابط اجتماعية بعد",
-  "Click the button above to add your first social media link": "انقر على الزر أعلاه لإضافة رابط وسائل التواصل الاجتماعي الأول الخاص بك",
-  "Please fill all fields": "يرجى ملء جميع الحقول",
-  "Invalid URL format": "تنسيق الرابط غير صالح",
-  "Failed to add social link": "فشل في إضافة الرابط الاجتماعي",
-  "Social link added successfully": "تمت إضافة الرابط الاجتماعي بنجاح",
-  "Social link updated successfully": "تم تحديث الرابط الاجتماعي بنجاح",
-  "Delete Social Link": "حذف الرابط الاجتماعي",
-  "Are you sure you want to delete this social media link?": "هل أنت متأكد أنك تريد حذف هذا الرابط الاجتماعي؟",
-  "Social link deleted successfully": "تم حذف الرابط الاجتماعي بنجاح",
-  "Sort Section": "قسم الترتيب",
-  "Profile Settings": "إعدادات الملف الشخصي",
-  "Project Manager": "مدير المشروع",
-  "123 Main St, City, State": "الشارع الرئيسي، المدينة، الولاية 123",
-  "Instagram": "إنستغرام",
-  "Facebook": "فيسبوك",
-  "Twitter": "تويتر",
-  "LinkedIn": "لينكد إن",
-  "TikTok": "تيك توك",
-  "YouTube": "يوتيوب",
-  "Snapchat": "سناب شات",
-  "Pinterest": "بينتيريست",
-  "Reddit": "ريديت",
-  "WhatsApp": "واتساب",
-  "Manage Sections": "إدارة الأقسام",
-  "Drag and drop to reorder sections": "اسحب وأفلت لإعادة ترتيب الأقسام",
-  "Add/Edit Video": "إضافة/تعديل فيديو",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": ""
+  "no cards available": "kart yok",
+  "Master Cheng Yen's Daily Journal": "Günlük Günlük Cheng Yen Ustası",
+  "Images": "Görüntüler",
+  "Contents": "İçerikler",
+  "All Contents": "Tüm İçerikler",
+  "Add/Edit Content": "İçerik Ekle/Düzenle",
+  "Contents Categories": "İçerik Kategorileri",
+  "Search contents...": "İçeriklerde ara...",
+  "contents": "İçerikler",
+  "Not Weekly": "Haftalık Değil",
+  "Weekly": "Haftalık",
+  "Weekly List": "Haftalık Liste",
+  "All": "Tümü",
+  "Content Images": "İçerik Görüntüleri",
+  "You can upload multiple images": "Birden fazla görüntü yükleyebilirsiniz",
+  "Please select images with minimum dimensions of 1920x1080 pixels for best quality.": "En iyi kalite için lütfen minimum 1920x1080 piksel boyutlarında görüntüler seçin.",
+  "Create New Content": "Yeni İçerik Oluştur",
+  "Back to Contents List": "İçerik Listesine Geri Dön",
+  "Total images selected": "Toplam seçilen görüntü sayısı",
+  "Add image URLs here. These will be sent as images_url": "Resim URL'lerini buraya ekleyin. Bunlar images_url olarak gönderilecektir",
+  "Add image URLs as alternative": "Alternatif olarak resim URL'leri ekleyin",
+  "Image URLs": "Resim URL'leri",
+  "Enter image URL and press Enter": "Resim URL'sini girin ve Enter'a basın",
+  "Enter content title": "İçerik başlığını girin",
+  "Enter content subtitle": "İçerik alt başlığını girin",
+  "Enter content excerpt or summary": "İçerik özeti veya alıntısını girin",
+  "Enter the full content of the content": "İçeriğin tam metnini girin",
+  "Click to upload images or drag and drop": "Resimleri yüklemek için tıklayın veya sürükleyip bırakın",
+  "Create Content": "İçerik Oluştur",
+  "No Content available.": "Mevcut içerik yok.",
+  "Update Content": "İçeriği Güncelle",
+  "Privacy Policy": "Gizlilik Politikası",
+  "Terms of Use": "Kullanım Şartları",
+  "• by Tzu Chi TR Design.": "• Tzu Chi TR Tasarımı tarafından",
+  "This Week’s Contents": "Bu Haftanın İçerikleri",
+  "This Week's Video": "Bu Haftanın Videosu",
+  "Watch this week's featured video": "Bu haftanın öne çıkan videosunu izleyin",
+  "This Week's Card": "Bu Haftanın Kartı",
+  "Explore this week's card": "Bu haftanın kartını keşfedin",
+  "This Week's Photo": "Bu Haftanın Fotoğrafı",
+  "Check this week's photo post": "Bu haftanın fotoğraf gönderisini kontrol edin",
+  "Cards": "Kartlar",
+  "This Week's Top Cards": "Bu Haftanın En İyi Kartları",
+  "Is Featured": "Öne Çıkan",
+  "Is New": "Yeni",
+  "Top Viewed Contents": "En Çok Görüntülenen İçerikler",
+  "Top Liked Contents": "En Çok Beğenilen İçerikler",
+  "Taiwant": "Tayvan",
+  "Add/Edit Video": "Video Ekle/Düzenle",
+  "All Events": "Tüm Etkinlikler",
+  "Website Info": "Site Bilgisi",
+  "Click to upload logo": "Logoyu yüklemek için tıklayın",
+  "No logo uploaded yet": "Henüz logo yüklenmedi",
+  "Upload New Logo": "Yeni Logo Yükle",
+  "Website Information": "Site Bilgisi",
+  "Website Logo": "Site Logosu",
+  "Upload and manage your website logo": "Site logonuzu yükleyin ve yönetin",
+  "Current Logo": "Mevcut Logo",
+  "Save Logo": "Logoyu Kaydet",
+  "Logo updated successfully": "Logo başarıyla güncellendi",
+  "Logo uploaded successfully": "Logo başarıyla yüklendi",
+  "Latest Updates": "Son Güncellemeler",
+  "Tags Category": "Etiket Kategorisi",
+  "Trending Now": "Şu Anda Trend",
+  "Optional - Alternative to file upload": "İsteğe Bağlı - Dosya Yüklemeye Alternatif",
+  "Card Type": "Kart Türü",
+  "Enter card type (e.g., featured, regular, special)": "Kart türünü girin (örneğin, öne çıkan, normal, özel)",
+  "Mark as New": "Yeni Olarak İşaretle",
+  "Manage Social Media": "Sosyal Medyayı Yönet",
+  "Add, edit, and remove social media links for your organization": "Kuruluşunuz için sosyal medya bağlantılarını ekleyin, düzenleyin ve kaldırın",
+  "Add New Social Link": "Yeni Sosyal Bağlantı Ekle",
+  "Platform": "Platform",
+  "Select a platform": "Bir platform seçin",
+  "URL": "URL",
+  "Add Social Link": "Sosyal Bağlantı Ekle",
+  "link": "Bağlantılar",
+  "No social links added yet": "Henüz sosyal bağlantı eklenmedi",
+  "Click the button above to add your first social media link": "İlk sosyal medya bağlantınızı eklemek için yukarıdaki düğmeye tıklayın",
+  "Please fill all fields": "Lütfen tüm alanları doldurun",
+  "Invalid URL format": "Geçersiz URL formatı",
+  "Failed to add social link": "Sosyal bağlantı eklenemedi",
+  "Social link added successfully": "Sosyal bağlantı başarıyla eklendi",
+  "Social link updated successfully": "Sosyal bağlantı başarıyla güncellendi",
+  "Delete Social Link": "Sosyal Bağlantıyı Sil",
+  "Are you sure you want to delete this social media link?": "Bu sosyal medya bağlantısını silmek istediğinizden emin misiniz?",
+  "Social link deleted successfully": "Sosyal bağlantı başarıyla silindi",
+  "Sort Section": "Bölümü Sırala",
+  "Profile Settings": "Profil Ayarları",
+  "Project Manager": "Proje Yöneticisi",
+  "123 Main St, City, State": "123 Ana Cadde, Şehir, Eyalet",
+  "Instagram": "Instagram",
+  "Facebook": "Facebook",
+  "Twitter": "Twitter",
+  "LinkedIn": "LinkedIn",
+  "TikTok": "TikTok",
+  "YouTube": "YouTube",
+  "Snapchat": "Snapchat",
+  "Pinterest": "Pinterest",
+  "Reddit": "Reddit",
+  "WhatsApp": "WhatsApp",
+  "Manage Sections": "Bölümleri Yönet",
+  "Drag and drop to reorder sections": "Bölümleri yeniden sıralamak için sürükleyip bırakın",
+  "Contents List": "İçerik Listesi",
+  "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
