--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1292,5 +1292,6 @@
   "Card Type": "نوع البطاقة",
   "Enter card type (e.g., featured, regular, special)": "أدخل نوع البطاقة (مثل مميز، عادي، خاص)",
   "Mark as New": "تمييز كجديد",
+  "Bosnia and Herzegovina": "البوسنة والهرسك",
   "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
