--- a/frontend/src/i18n/locales/ch/translation.json
+++ b/frontend/src/i18n/locales/ch/translation.json
@@ -1292,5 +1292,6 @@
   "Card Type": "卡片類型",
   "Enter card type (e.g., featured, regular, special)": "輸入卡片類型（例如，精選、常規、特殊）",
   "Mark as New": "標記為新",
+  "Bosnia and Herzegovina": "波斯尼亞和黑塞哥維那",
   "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
