--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -1292,5 +1292,6 @@
   "Your account is not confirmed, please check your email": "Your account is not confirmed, please check your email.",
   "Environment & Sustainability": "Environment & Sustainability",
   "Art & Culture": "Art & Culture",
+  "Bosnia and Herzegovina": "Bosnia and Herzegovina",
   "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
