--- a/frontend/src/i18n/locales/tr/translation.json
+++ b/frontend/src/i18n/locales/tr/translation.json
@@ -1292,5 +1292,6 @@
   "Manage Sections": "Bölümleri Yönet",
   "Drag and drop to reorder sections": "Bölümleri yeniden sıralamak için sürükleyip bırakın",
   "Contents List": "İçerik Listesi",
+  "Bosnia and Herzegovina": "Bosna-Hersek",
   "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
