--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1293,5 +1293,18 @@
   "Enter card type (e.g., featured, regular, special)": "أدخل نوع البطاقة (مثل مميز، عادي، خاص)",
   "Mark as New": "تمييز كجديد",
   "Bosnia and Herzegovina": "البوسنة والهرسك",
-  "-------------------------------------------------------------": "-------------------------------------------------------------"
+  "-------------------------------------------------------------": "-------------------------------------------------------------",
+  "Search events...": "بحث عن الفعاليات ...",
+  "Add New Season": "إضافة موسم جديد",
+  "No seasons found for this series": "لم يتم العثور على مواسم لهذه السلسلة",
+  "Edit Series": "تعديل السلسلة",
+  "Edit Season": "تعديل الموسم",
+  "Delete Season": "حذف الموسم",
+  "Are you sure you want to delete this season?": "هل أنت متأكد أنك تريد حذف هذا الموسم؟",
+  "This action cannot be undone.": "لا يمكن التراجع عن هذا الإجراء.",
+  "Delete Series": "حذف السلسلة",
+  "Are you sure you want to delete this series?": "هل أنت متأكد أنك تريد حذف هذه السلسلة؟",
+  "Series deleted successfully": "تم حذف السلسلة بنجاح",
+  "Category disabled": "تم تعطيل التصنيف",
+  "Category enabled": "تم تمكين التصنيف"
 }
