feat: Refactor video and event components; enhance date picker functionality and improve internationalization support

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1296,5 +1296,15 @@
   "This Week's Contents": "محتويات هذا الأسبوع",
   "Please register and you will be automatically redirected to the previous page.": "يرجى التسجيل وسيتم إعادة توجيهك تلقائيًا إلى الصفحة السابقة.",
   "Bosnia and Herzegovina": "البوسنة والهرسك",
-  "-------------------------------------------------------------": "-------------------------------------------------------------"
+  "-------------------------------------------------------------": "-------------------------------------------------------------",
+  "Add New Season": "إضافة موسم جديد",
+  "Show in the dropdown menu": "عرض في قائمة السحب ",
+  "Hide from the dropdown menu": "إخفاء من قائمة السحب ",
+  "Content": "المحتوى",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": ""
 }
