--- a/frontend/src/i18n/locales/ch/translation.json
+++ b/frontend/src/i18n/locales/ch/translation.json
@@ -1288,10 +1288,26 @@
   "Tags Category": "標籤類別",
   "Trending Now": "熱門趨勢",
   "Your account is not confirmed, please check your email": "您的帳戶尚未確認，請檢查您的電子郵件",
-  "Optional - Alternative to file upload": "選擇性 - 文件上傳的替代方案",
-  "Card Type": "卡片類型",
+  "Optional - Alternative to file upload": "可選 - 上傳文件的替代方案",
+  "Card Type": " 卡片類型",
   "Enter card type (e.g., featured, regular, special)": "輸入卡片類型（例如，精選、常規、特殊）",
   "Mark as New": "標記為新",
+  "No events found": "沒有找到活動",
+  "This Week's Contents": "本週內容",
+  "Please register and you will be automatically redirected to the previous page.": "請註冊，您將自動重定向到上一頁。",
   "Bosnia and Herzegovina": "波斯尼亞和黑塞哥維那",
+  "Search events...": "搜尋活動...",
+  "Add New Season": "新增季節",
+  "No seasons found for this series": "此系列未找到季節",
+  "Edit Series": "編輯系列",
+  "Edit Season": "編輯季節",
+  "Delete Season": "刪除季節",
+  "Are you sure you want to delete this season?": "您確定要刪除此季節嗎？",
+  "This action cannot be undone.": "此操作無法撤銷。",
+  "Delete Series": "刪除系列",
+  "Are you sure you want to delete this series?": "您確定要刪除此系列嗎？",
+  "Series deleted successfully": "系列刪除成功",
+  "Category disabled": "分類已禁用",
+  "Category enabled": "分類已啟用",
   "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
