--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -1292,6 +1292,22 @@
   "Your account is not confirmed, please check your email": "Your account is not confirmed, please check your email.",
   "Environment & Sustainability": "Environment & Sustainability",
   "Art & Culture": "Art & Culture",
+  "No events found": "No events found",
+  "This Week's Contents": "This Week's Contents",
+  "Please register and you will be automatically redirected to the previous page.": "Please register and you will be automatically redirected to the previous page.",
   "Bosnia and Herzegovina": "Bosnia and Herzegovina",
+  "Search events...": "Search events...",
+  "Add New Season": "Add New Season",
+  "No seasons found for this series": "No seasons found for this series",
+  "Edit Series": "Edit Series",
+  "Edit Season": "Edit Season",
+  "Delete Season": "Delete Season",
+  "Are you sure you want to delete this season?": "Are you sure you want to delete this season?",
+  "This action cannot be undone.": "This action cannot be undone.",
+  "Delete Series": "Delete Series",
+  "Are you sure you want to delete this series?": "Are you sure you want to delete this series?",
+  "Series deleted successfully": "Series deleted successfully",
+  "Category disabled": "Category disabled",
+  "Category enabled": "Category enabled",
   "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
