--- a/frontend/src/i18n/locales/tr/translation.json
+++ b/frontend/src/i18n/locales/tr/translation.json
@@ -1293,5 +1293,21 @@
   "Drag and drop to reorder sections": "Bölümleri yeniden sıralamak için sürükleyip bırakın",
   "Contents List": "İçerik Listesi",
   "Bosnia and Herzegovina": "Bosna-Hersek",
+  "No events found": "Etkinlik bulunamadı",
+  "This Week's Contents": "Bu Haftanın İçeriği",
+  "Please register and you will be automatically redirected to the previous page.": "Lütfen kaydolun, önceki sayfaya otomatik olarak yönlendirileceksiniz.",
+  "Search events...": "Etkinlikleri ara...",
+  "Add New Season": "Yeni Sezon Ekle",
+  "No seasons found for this series": "Bu seri için sezon bulunamadı",
+  "Edit Series": "Seriyi Düzenle",
+  "Edit Season": "Sezonu Düzenle",
+  "Delete Season": "Sezonu Sil",
+  "Are you sure you want to delete this season?": "Bu sezonu silmek istediğinizden emin misiniz?",
+  "This action cannot be undone.": "Bu işlem geri alınamaz.",
+  "Delete Series": "Seriyi Sil",
+  "Are you sure you want to delete this series?": "Bu seriyi silmek istediğinizden emin misiniz?",
+  "Series deleted successfully": "Seri başarıyla silindi",
+  "Category disabled": "Kategori devre dışı bırakıldı",
+  "Category enabled": "Kategori etkinleştirildi",
   "-------------------------------------------------------------": "-------------------------------------------------------------"
 }
